GNOME Bugzilla – Bug 734350
oggdemux: Unref peer pad after use in error case
Last modified: 2014-08-06 11:49:02 UTC
While looking for accidentally forgotten unrefs after calling gst_pad_get_peer() I found such an occurance in gst_ogg_demux_check_duration_push(). The attached patch aims to fix this.
Created attachment 282659 [details] [review] Proposed patch unreffing peer pad after use
commit 1da3df79cfed5292299efa93f36c7a9c919af527 Author: Sebastian Rasmussen <sebras@hotmail.com> Date: Wed Aug 6 13:22:56 2014 +0200 oggdemux: Unref peer pad after use in error case Fixes https://bugzilla.gnome.org/show_bug.cgi?id=734350