oggdemux: Unref peer pad after use in error case

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=734350